# titulus

./: Cargo.toml  Dockerfile  README.md  index.html  index.scss
docs/: CNAME  index-235f37544b8f916c.css  index-2b7edc7233aa4482.css  index-3d10b6420a6fefd3.css  index-6b6dd7fb30740a1f.css  index-715fd77a40ee3717.css  index-80be44bbc8c8118f.css  index-88d3f542732a961d.css  index-bad62135af0b6ed9.css  index-e047bdb5a5922f12.css  index-e114232a69a93c48.css  index.html  titulus-20303235b0f7247c.js  titulus-20303235b0f7247c_bg.wasm  titulus-25a52b23371941eb.js  titulus-25a52b23371941eb_bg.wasm  titulus-25c0d249e259261.js  titulus-25c0d249e259261_bg.wasm  titulus-38dc9e8a3f046aba.js  titulus-38dc9e8a3f046aba_bg.wasm  titulus-4dc71665e9fb9496.js  titulus-4dc71665e9fb9496_bg.wasm  titulus-561b73d6f36226b.js  titulus-561b73d6f36226b_bg.wasm  titulus-6885178f9f22e93.js  titulus-6885178f9f22e93_bg.wasm  titulus-7247f3e95214fca1.js  titulus-7247f3e95214fca1_bg.wasm  titulus-7d2e2f2c018cf854.js  titulus-7d2e2f2c018cf854_bg.wasm  titulus-87254dae3be1e556.js  titulus-87254dae3be1e556_bg.wasm  titulus-9edd980e7bb7fb17.js  titulus-9edd980e7bb7fb17_bg.wasm  titulus-a6d2f379d0c80a16.js  titulus-a6d2f379d0c80a16_bg.wasm  titulus-b243927f92fb52fd.js  titulus-b243927f92fb52fd_bg.wasm  titulus-b539e620f3b4438b.js  titulus-b539e620f3b4438b_bg.wasm  (+4 more)
src/: main.rs  utils.rs
src/components/: commands.rs  hotkey_input.rs  mod.rs  saved.rs  settings.rs
src/models/: command.rs  command_type.rs  mod.rs  profile.rs
src/pages/: content.rs
