[package]
name = "titulus"
version = "0.3.0"
edition = "2021"

[dependencies]
gloo = "0.8"
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
web-sys = {version = "0.3.61", features=["HtmlInputElement", "HtmlSelectElement", "HtmlButtonElement", "HtmlDivElement"]} 
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0" 
yew-nested-router = "0.6.1"
yew-router = "0.18.0"
